fixed 'Memes' & 'Merksprüche' not showing

--- a/src/projekt_anki_notetypes/note_types/ProjektAnkiCloze/Styling.css
+++ b/src/projekt_anki_notetypes/note_types/ProjektAnkiCloze/Styling.css
@@ -763,6 +763,7 @@ kbd:nth-of-type(10n+0) {
 
 #linkcontainer .expanded-button {
   width: 90%;
+  font-weight: normal;
 }
 
 #button-thieme {
